# CUDA-Acceleration-of-Image-Processing-Kernels

./: CMakeLists.txt  README.md
benchmarks/: benchmarks_cpu.cpp  benchmarks_cuda.cu  results.md
cuda-convolution/: README.md
docs/: profiling.md
scripts/: build.sh  run_benchmarks.sh
src/: convolution_naive.cu  main.cu
src/cpu/: convolution_cpu.cpp
src/cuda/: convolution_naive.cu  convolution_shared.cu  utils.cuh
